--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "boto3>=1.35.37",
     "langchain-aws>=0.2.2",
     "diagrams>=0.23.4",
+    "langchain-xai>=0.1.1",
 ]
 
 packages = [
